# calendar-duration-rs

./: Cargo.toml  README.md  SECURITY.md
.github/: CODEOWNERS
.github/workflows/: checks.yml
examples/: main.rs
src/: lib.rs  ops.rs
